update .gitignore by 'Byte-compiled optimized and DLL files'

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 local_settings.py
 db.sqlite3
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 # celery beat schedule file
 celerybeat-schedule
 
